--- a/YouTube Tutorial/YouTube Tutorial.csproj
+++ b/YouTube Tutorial/YouTube Tutorial.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{BE2C1678-B1B6-4CB5-A687-3F8898F6E3D7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>YouTube_Tutorial</RootNamespace>
-    <AssemblyName>YouTube_Tutorial</AssemblyName>
+    <AssemblyName>YouTube Tutorial</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -53,6 +53,7 @@
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
